# NDK-Example2

./: LICENSE  README.md  local.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/uz/techtalk/android/ndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: img-processing.cpp
app/src/main/java/uz/techtalk/android/ndk/: ImageProcessing.kt  ImageProcessingCallback.kt  MainActivity.kt  Util.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/uz/techtalk/android/ndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
